[package]
name = "bidgely_adapter"
version = "0.1.0"
authors = ["Steve Sampson <mail@stephensampson.dev>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.25.0", features = ["serde", "serialize"] }
reqwest = "0.11.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
