[package]
name = "nspdata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bidgely_adapter = { path = "../bidgely_adapter" }
clap = { version = "4.0.17", features = ["derive"] }
quick-xml = "0.25.0"
reqwest = "0.11.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.21.2", features = ["full"] }
